--- a/.env.local
+++ b/.env.local
@@ -7,3 +7,4 @@ VITE_FIREBASE_APP_ID=1:854636080862:web:f24913edc6b359210d9c4f
 VITE_FIREBASE_MEASUREMENT_ID=G-7EWR7SPVE2
 VITE_ADMIN_EMAIL=caiorissa@gmail.com
 VITE_AI_WORKOUT_API_URL=http://localhost:3001/api
+VITE_API_URL=https://fyzenbackend.onrender.com
