--- a/.env.local
+++ b/.env.local
@@ -6,5 +6,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=854636080862
 VITE_FIREBASE_APP_ID=1:854636080862:web:f24913edc6b359210d9c4f
 VITE_FIREBASE_MEASUREMENT_ID=G-7EWR7SPVE2
 VITE_ADMIN_EMAIL=caiorissa@gmail.com
-VITE_AI_WORKOUT_API_URL=http://localhost:3001/api
+VITE_AI_WORKOUT_API_URL=https://fyzenbackend.onrender.com/api
 VITE_API_URL=https://fyzenbackend.onrender.com
