--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "obfuscate": "terser dist/assets/*.js -o dist/assets/[name].min.js -c -m"
   },
   "dependencies": {
     "canvas-confetti": "^1.9.4",
@@ -21,6 +22,7 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.44.1",
     "vite": "^7.1.12"
   }
 }
