--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
